syntax = "proto3";

package ricartAgrawala;
option go_package = ".;ricartAgrawala";


service Ricartagrawala {
  // En node beder alle andre om tilladelse til CS
  rpc Request (RequestMsg) returns (Ack);

  // Tilladelse gives eksplicit via Reply
  rpc Reply   (ReplyMsg)   returns (Ack);
}

message RequestMsg {
  int32  sender_id  = 1;
  int64  timestamp  = 2; // Lamport-tid ved udsendelse
  string content    = 3; // valgfrit (fx "req")
}

message ReplyMsg {
  int32  sender_id  = 1;
  int64  timestamp  = 2; // Lamport-tid ved udsendelse af reply
  string content    = 3; // valgfrit (fx "ok")
}

message Ack {
  bool ok = 1;
}
